src/objects/et4ae5__SMSJunction__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Business_Unit__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__fBusiness_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS Definitions</relationshipLabel>
        <relationshipName>SMS_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>et4ae5__Created_Date_Time__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__Created_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email_Name__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__smsName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__From_Email__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__FromEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__From_Name__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__FromName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SMSDefinition__c</fullName>
        <label>Send Definition</label>
        <referenceTo>et4ae5__SMSDefinition__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Status__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__Send_Status_View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Status_Date_Time__c</fullName>
        <formula>et4ae5__SMSDefinition__r.et4ae5__Status_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>SMS Junction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SMS Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>